--- a/SalesWebMVC02/Views/Home/About.cshtml
+++ b/SalesWebMVC02/Views/Home/About.cshtml
@@ -4,4 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Professor @ViewData["Professor"]</p>
+<address>
+    <strong> Mais informações: </strong> <a href="https://prout.com.br"> Prout.com.br</a>
+</address>
